# buildtools

./: .gitignore  BUILD.bazel  WORKSPACE
api_proto/: BUILD.bazel
build_proto/: BUILD.bazel
buildifier/: BUILD.bazel
buildifier/npm/: BUILD.bazel  package.json
buildifier/utils/: BUILD.bazel
buildifier2/: BUILD.bazel
buildozer/: BUILD.bazel
buildozer/npm/: BUILD.bazel  package.json
bzlenv/: BUILD.bazel
config/: BUILD.bazel
convertast/: BUILD.bazel
deps_proto/: BUILD.bazel
differ/: BUILD.bazel
edit/: BUILD.bazel
edit/safe/: BUILD.bazel
extra_actions_base_proto/: BUILD.bazel
file/: BUILD.bazel
generatetables/: BUILD.bazel
labels/: BUILD.bazel
lang/: BUILD.bazel
tables/: BUILD.bazel
testutils/: BUILD.bazel
unused_deps/: BUILD.bazel
unused_deps_py/: BUILD.bazel  README.md  main.py  requirements.txt
unused_deps_py/unused_deps/: processor.py
unused_deps_py/unused_deps_py_lib/: BUILD.bazel  processor.py  string_util_test.py
warn/: BUILD.bazel
warn/docs/: BUILD.bazel
wspace/: BUILD.bazel
